# volt

./: .codeclimate.yml  .coveragerc  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yamllint.yaml  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  CONTRIB  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO  dev-requirements.txt  flake.nix  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/: dependabot.yml
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml
demo/: settings.py  voltconf.py
demo/content/: test_post.md
demo/content/blog/: 001-intro.md
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/source/: conf.py  contents.rst.inc  contributing.rst  extension.rst  help.rst  index.rst  internals.rst  quickstart.rst
extras/: volt
src/: server.py
src/volt/: __init__.py  _logging.py  cli.py  config.py  error.py  hooks.py  outputs.py  server.py  session.py  signals.py  site.py  template.py  theme.py
src/volt/engines/: __init__.py  common.py  markdown2.py
src/volt/themes/ion/: theme.toml
src/volt/themes/ion/templates/: base.html.j2
tests/: __init__.py  _import_test.py  _logging_test.py  cli_build_test.py  cli_init_test.py  cli_test.py  config_test.py  conftest.py  engines_test.py  session_build_test.py  session_edit_test.py  session_new_test.py  session_test.py  site_test.py  targets_test.py  test_cli_build.py  test_cli_init.py  test_config.py  test_init.py  test_site.py  test_targets.py  test_units.py  test_utils.py  theme_test.py  units_test.py  utils.py  utils_test.py
tests/fixtures/cli_build_minimal/: volt.toml
tests/fixtures/cli_build_minimal/theme/t/templates/: page.html.j2
tests/fixtures/ok_extended/: volt.toml
tests/fixtures/ok_extended.built/: contents  extension  source  theme  volt.toml
tests/fixtures/ok_extended.built/output/: foo.html  index.html
tests/fixtures/ok_extended.built/output/assets/: modified.css
tests/fixtures/ok_extended.built/output/gallery/: lights.html
tests/fixtures/ok_extended.built/output/nested/: post.html
tests/fixtures/ok_extended.built/source/: foo.md  index.md
tests/fixtures/ok_extended.built/theme/h/: hooks.py
tests/fixtures/ok_extended/contents/nested/: post.md
tests/fixtures/ok_extended/extension/: cli.py
tests/fixtures/ok_extended/source/.drafts/: bar.md
tests/fixtures/ok_extended/source/gallery/: imgs.yaml
tests/fixtures/ok_extended/theme/h/: engine.py  engines.py  hooks.py  theme.toml
tests/fixtures/ok_extended/theme/h/templates/: base.html.j2  functions.py  (+2 more)
tests/fixtures/ok_minimal/: volt.toml
tests/fixtures/ok_minimal.built/: contents  source  theme  volt.toml
tests/fixtures/ok_minimal.built/output/: index.html
tests/fixtures/ok_minimal.built/output/assets/: style.css
tests/fixtures/ok_minimal.built/theme/t/: theme.toml
tests/fixtures/ok_minimal/source/: index.md
volt/: __init__.py  _import.py  _logging.py  _version.py  cli.py  config.py  constants.py  engine.py  engines.py  error.py  exceptions.py  gen.py  generator.py  hooks.py  logging.py  main.py  outputs.py  parser.py  resource.py  server.py  session.py  signals.py  site.py  sources.py  target.py  targets.py  template.py  test.md  theme.py  units.py  util.py  utils.py
volt/conf/: __init__.py  default.py  options.py
volt/config/: __init__.py  base.py  default.py  default_conf.py  default_widgets.py
volt/data/demo/: voltconf.py
volt/data/demo/content/blog/: 01_hello-world.md
volt/data/demo/content/plain/: about-volt.md
volt/data/demo/templates/: base.html  blog_pagination.html  blog_post.html  blog_unit.html  index.html  page.html
volt/data/init/: voltconf.py
volt/defaults/: page.html.j2
volt/demo/: voltconf.py
volt/demo/content/blog/: 002-unicode.md
volt/demo/content/collection/: test_img.md
volt/engine/: __init__.py  base.py  blog.py  collection.py  core.py  page.py  plain.py
volt/engine/builtins/: __init__.py  blog.py  plain.py  text.py
volt/engines/: __init__.py  blog.py  collection.py  common.py  markdown2.py  plain.py  static.py  unit.py
volt/plugin/: __init__.py  core.py  markdown.py  syntax.py  volt-atomic.py  volt-markdown.py  volt-syntax.py
volt/plugin/builtins/: css_minifier.py  js_minifier.py  markd.py  markdown_parser.py  rst.py  rst_parser.py  syntax.py  textile_parser.py
volt/plugin/builtins/atomic/: __init__.py  atom_template.xml
volt/plugin/volt-atomic/: __init__.py
volt/plugins/: __init__.py  markd.py  markdown.py  syntax.py  volt-markdown.py  volt-syntax.py
volt/plugins/atomic/: __init__.py  atom_template.xml
volt/plugins/volt-atomic/: __init__.py  atom_template.xml
volt/templates/: engine.py  plugin.py  widgets.py
volt/templates/demo/: voltconf.py  widgets.py
volt/templates/demo/assets/css/: main.css
volt/templates/demo/contents/blog/: 01_hello-world.md  02_getting-your-hands-wet.md  03_top-cat.md  04_hong-kong.md
volt/templates/demo/templates/: blog_pagination.html
volt/templates/init/: voltconf.py
volt/test/: __init__.py  mocks.py  test_config.py  test_engine.py  test_engine_base.py  test_engine_blog.py  test_engine_builtins.py  test_engine_core.py  test_engine_unit.py  test_gen.py  test_generator.py  test_main.py  test_plugin.py  test_utils.py
volt/test/fixtures/: default.py
volt/test/fixtures/config/: default.py
volt/test/fixtures/engines/engine_pass/: 04_dream-within-a-dream.md
volt/test/fixtures/install_dir/: default.py  default_conf.py  default_widgets.py
volt/test/fixtures/project/: voltconf.py
volt/test/fixtures/project/templates/: _base.html  _post.html
volt/test/fixtures/units/unit_pass/: 01_pass.md
volt/test/fixtures/user_dir/: voltconf.py  widgets.py
volt/test/fixtures/user_dir/engines/: in_both.py  in_user.py
volt/test/fixtures/user_dir/plugins/: in_user.py
volt/test/fixtures/user_dir/templates/: item.html
volt/themes/ion/: theme.toml
volt/themes/ion/static/assets/: style.css
volt/themes/ion/templates/: base.html.j2  page.html.j2
(+20 files in other folders)
